# WuxiaBot

./: .replit  README.md  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  website.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
classes/: Player.py
commands/: admin.py  adventure.py  bug.py  changelog.py  cultivate.py  gethelp.py  help.py  leaderboard.py  menu.py  recipes.py  start.py  suggest.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Leaderboard.js  SignUp.js
functions/: adventure.py  cooldown_manager.py  cultivate.py  decrease_cooldowns.py  give_achievement.py  give_title.py  initialize.py  reincarnate.py  rest.py  using_command_failsafe.py  you_die.py
