[tool.poetry]
name = "wuxia-bot"
version = "0.1.0"
description = ""
authors = ["Tyr Thurey <tyrthurey@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
nextcord = "^2.6.0"
website = "^1.1"
flask = "^3.0.2"
zenora = "^0.0.3.post1"
supabase = "^2.4.0"
waitress = "^3.0.0"
asgiref = "^3.7.2"
django = "^5.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"